# credit_risk_scoring

credit_risk_model_api/app/: config.py
credit_risk_model_api/app/tests/: conftest.py
credit_risk_model_pacakage/: data_split.ipynb  pyproject.toml
credit_risk_model_pacakage/credit_risk_model_package/: config.yml  pipeline.py  predict.py
credit_risk_model_pacakage/credit_risk_model_package/config/: core.py
credit_risk_model_pacakage/credit_risk_model_package/datasets/: test.csv
credit_risk_model_package/: README.md  pyproject.toml
credit_risk_model_package/credit_risk_env/: pyvenv.cfg
credit_risk_model_package/credit_risk_model_package/config/: core.py
credit_risk_model_package/credit_risk_model_package/datasets/: test.ipynb  train.csv
credit_risk_model_package/requirements/: test_requirements.txt
model-serving-api/customer_credit_risk_score_api/: requirements.txt  test_requirements.txt  tox.ini
production-model-package/: data_split.ipynb  setup.py  tox.ini
production-model-package/classification_model/: config.yml  pipeline.py  predict.py  train_pipeline.py
production-model-package/credit_risk_classification_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
production-model-package/requirements/: requirements.txt
production-model-package/tests/: conftest.py  test_prediction.py
research-and-development/: selected_feats.csv  step_01_data_prep_and_analysis.ipynb  step_02_feature_engineering_and_selection.ipynb  step_03_feature_engineering_pipeline.ipynb  step_04_machine_learning_pipeline.ipynb
(+11 files in other folders)
